--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation -->
+    <nav id="nav">
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home">
+        <div class="title-group">
+            <h1>Pranav P</h1>
+            <h2>Developer</h2>
+        </div>
+    </section>
+    <!-- About Section -->
+    <section id="about">
+        <h1>Illustrations</h1>
+    </section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h1>Buttons</h1>
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+
+    </section>
+
     <!-- Script -->
     <script src="script.js"></script>
 </body>
