--- a/index.html
+++ b/index.html
@@ -27,14 +27,46 @@
     <!-- About Section -->
     <section id="about">
         <h1>Illustrations</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Good" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>High Concept</h2>
+                <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
+            </div>
+        </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni debitis eaque esse voluptatem architecto, facere, aliquid repellendus error facilis ducimus culpa modi nostrum natus sit ab, earum exercitationem dicta. Natus?</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
-
+        <div class="social-icons">
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-solid fa-code"></i>
+            <i class="fa-brands fa-codepen"></i>
+        </div>
     </section>
 
     <!-- Script -->
