--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Dark/Light Mode Switch Toggling -->
+    <div class="theme-switch-wrapper">
+        <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <label class="switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+        </label>
+   </div>
     <!-- Navigation -->
     <nav id="nav">
         <a href="#home">HOME</a>
