Contact css _blank fix

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="social-icons">
-            <a href="https://github.com/pranavp-work"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/pranavp-work/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://twitter.com/cryptomusk420"></a><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://www.instagram.com/pranavp.work/"></a><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://leetcode.com/pranavp-work/"></a><i class="fa-solid fa-code"></i></a>
-            <a href="https://codepen.io/Pranav-P-the-bold"></a><i class="fa-brands fa-codepen"></i></a>
+            <a href="https://github.com/pranavp-work" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/pranavp-work/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://twitter.com/cryptomusk420" target="_blank"></a><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/pranavp.work/" target="_blank"></a><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://leetcode.com/pranavp-work/" target="_blank"></a><i class="fa-solid fa-code"></i></a>
+            <a href="https://codepen.io/Pranav-P-the-bold" target="_blank"></a><i class="fa-brands fa-codepen"></i></a>
         </div>
     </section>
 
